--- a/package.json
+++ b/package.json
@@ -2,24 +2,26 @@
   "name": "simplechatapp",
   "version": "1.0.0",
   "scripts": {
-    "build": "tsc --noEmit && tsc --outDir build",
-    "dev": "node build/index.js",
-    "start": "nodemon"
+    "build": "tsc --noEmit && tsc --outDir build && npm run copy-public",
+    "dev": "node build/server.js",
+    "start": "nodemon",
+    "copy-public": "copyfiles -u 1 public/**/* build"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@vercel/postgres": "^0.9.0",
-    "cors": "^2.8.5",
+    "copyfiles": "^2.4.1",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "http": "^0.0.1-security",
     "nodemon": "^3.1.4",
-    "socket.io": "^4.7.5",
     "typescript": "^5.5.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "express": "^4.19.2",
+    "http": "^0.0.1-security",
+    "cors": "^2.8.5",
+    "socket.io": "^4.7.5",
+    "@vercel/postgres": "^0.9.0"
   }
 }
