--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "copyfiles": "^2.4.1",
     "dotenv": "^16.4.5",
     "nodemon": "^3.1.4",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "copyfiles": "^2.4.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@vercel/postgres": "^0.9.0",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "http": "^0.0.1-security",
-    "cors": "^2.8.5",
-    "socket.io": "^4.7.5",
-    "@vercel/postgres": "^0.9.0"
+    "socket.io": "^4.7.5"
   }
 }
