--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "simplechatapp",
+  "name": "simple-chat-app",
   "version": "1.0.0",
+  "author": "riccardogenova",
+  "license": "ISC",
   "scripts": {
     "build": "tsc --noEmit && tsc --outDir build && npm run copy-public",
-    "dev": "node build/server.js",
-    "start": "nodemon",
-    "copy-public": "copyfiles -u 1 public/**/* build"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "dotenv": "^16.4.5",
-    "nodemon": "^3.1.4",
-    "typescript": "^5.5.3",
-    "copyfiles": "^2.4.1"
+    "start": "node build/server.js",
+    "copy-public": "copyfiles -u 1 public/**/* build",
+    "dev": "nodemon"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "copyfiles": "^2.4.1",
+    "nodemon": "^3.1.4",
+    "typescript": "^5.5.3"
+  },
+  "dependencies": {
     "@vercel/postgres": "^0.9.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http": "^0.0.1-security",
     "socket.io": "^4.7.5"
